k8s-specifications/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: votex
  labels:
    app.kubernetes.io/name: votex
    app.kubernetes.io/part-of: votex-platform
